images added and code changed

--- a/item1.html
+++ b/item1.html
@@ -298,13 +298,13 @@
                 </div>
 
                 <!-- STORY -->
-                <!-- <div id="story">
+                <div id="story">
                     <div class="grid-wrap">
                         <div class="row section">
                             <div class="col-sm-12 col-md-10 col-md-offset-1">
                                 <div class="row">
                                     <div class="col-xs-12 col-md-6">
-                                        <span class="paragraph-title wow textLeft">chapter &mdash; 1</span>
+                                        <!-- <span class="paragraph-title wow textLeft">chapter &mdash; 1</span> -->
                                         <div class="wrapped-heading">
                                             <h2 class="wow textLeft">sto</h2>
                                             <h2 class="wow textLeft" data-wow-delay=".15s">ry<span>.</span></h2>
@@ -313,7 +313,7 @@
                                     <div class="col-xs-12 col-md-5 col-md-offset-1" data-wow-delay=".3s">
                                         <div class="chapter-desc offset-both-sm">
                                             <figure class="chapter-icon" data-parallax='{"y": -100, "smoothness": 10}'>
-                                                <img src="img/allpro/icon-story.svg" alt="Icon Story">
+                                                <img src="img/script.png" alt="Icon Story">
                                             </figure>
                                             <p class="wow textLeft" data-wow-delay=".15s">After making a name for themselves outfitting the athletic departments of some of the largest schools on the Eastern seaboard and beyond, All Pro needed a new website to match their explosive market growth. Responsive design, custom photography, and a simple but engaging UX were utilized to maximize the consumer impact while driving home All Pro’s core messaging.</p>
                                             <p class="wow textLeft" data-wow-delay=".3s">Now that they have a website that embodies the same assets as their uniforms—style, quality, and performance—All Pro has now positioned themselves as industry leaders on the breakaway with nothing but daylight up ahead.</p>
@@ -322,8 +322,8 @@
                                 </div>
                             </div>
                         </div>
-                    </div>  -->
-                <div id="story">
+                    </div> 
+                <!-- <div id="story">
                     <div class="grid-wrap">
                         <div class="row section">
                             <div class="col-sm-12 col-md-10 col-md-offset-1">
@@ -333,7 +333,7 @@
                                         <div class="chapter-desc offset-both-sm">
                                             <figure class="chapter-icon" data-parallax='{"y": -100, "smoothness": 10}'>
                                                 <!-- <img src="img/allpro/icon-story.svg" alt="Icon Story"> -->
-                                                <img src="img/script.png" alt="Icon Story">
+                                                <!-- <img src="img/script.png" alt="Icon Story">
                                             </figure>
                                             <p class="wow textLeft" data-wow-delay=".15s">After making a name for
                                                 themselves outfitting the athletic departments of some of the largest
@@ -348,16 +348,16 @@
                                         </div>
                                     </div>
                                     <div class="col-xs-12 col-md-6">
-                                        <!-- <span class="paragraph-title wow textLeft">chapter &mdash; 1</span> -->
-                                        <div class="wrapped-heading rightAlign">
+                                        < <span class="paragraph-title wow textLeft">chapter &mdash; 1</span> -->
+                                        <!-- <div class="wrapped-heading rightAlign">
                                             <h2 class="wow textLeft ">sto</h2>
                                             <h2 class="wow textLeft " data-wow-delay=".15s">ry<span>.</span></h2>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
+                        </div> 
+                    </div>  -->
                     <div class="img-wrap offset-top-sm">
                         <!-- <figure class="wrapped-img img-first" data-parallax='{"y": -400, "smoothness": 10}'>
                             <img src="img/allpro/story-img.jpg" alt="Boy in football uniform">
@@ -418,7 +418,7 @@
                                 <!-- <span class="paragraph-title wow textLeft">chapter &mdash; 2</span> -->
                                 <div class="wrapped-heading">
                                     <figure class="chapter-icon" data-parallax='{"y": -50, "x": 50, "smoothness": 10}'>
-                                        <img src="img/allpro/icon-ux.svg" alt="ux">
+                                        <img src="img/ux.png" alt="ux">
                                     </figure>
                                     <h2 class="wow textLeft" data-wow-delay=".3s">UX<span>.</span></h2>
                                 </div>
@@ -440,13 +440,13 @@
                 </div>
 
                 <!-- DESIGN -->
-                <!-- <div id="design" class="offset-top-sm">
+                <div id="design" class="offset-top-sm">
                     <div class="grid-wrap">
                         <div class="row section">
                             <div class="col-sm-12 col-md-10 col-md-offset-1">
                                 <div class="row bottom-xs">
                                     <div class="col-xs-12 col-md-6">
-                                        <span class="paragraph-title wow textLeft">chapter &mdash; 3</span>
+                                        <!-- <span class="paragraph-title wow textLeft">chapter &mdash; 3</span> -->
                                         <div class="wrapped-heading">
                                             <h2 class="wow textLeft" data-wow-delay=".25s">des</h2>
                                             <h2 class="wow textLeft" data-wow-delay=".35s">ign<span>.</span></h2>
@@ -454,7 +454,7 @@
                                     </div>
                                     <div class="col-xs-12 col-md-5 col-md-offset-1">
                                         <figure class="chapter-icon" data-parallax='{"y": -100, "smoothness": 10}'>
-                                            <img src="img/allpro/icon-design.svg" alt="design">
+                                            <img src="img/web-design.png" alt="design">
                                         </figure>
                                         <div class="chapter-desc">
                                             <p class="wow textLeft" data-wow-delay=".45s">To cover all necessary design
@@ -467,8 +467,8 @@
                                 </div>
                             </div>
                         </div>
-                    </div> -->
-                    <div id="design" class="offset-top-sm">
+                    </div>
+                    <!-- <div id="design" class="offset-top-sm">
                         <div class="grid-wrap">
                             <div class="row section">
                                 <div class="col-sm-12 col-md-10 col-md-offset-1">
@@ -476,7 +476,7 @@
                                        
                                         <div class="col-xs-12 col-md-5 col-md-offset-1">
                                             <figure class="chapter-icon" data-parallax='{"y": -100, "smoothness": 10}'>
-                                                <img src="img/allpro/icon-design.svg" alt="design">
+                                                <img src="img/web-design.png" alt="design">
                                             </figure>
                                             <div class="chapter-desc">
                                                 <p class="wow textLeft" data-wow-delay=".45s">To cover all necessary design
@@ -487,8 +487,8 @@
                                             </div>
                                         </div>
                                         <div class="col-xs-12 col-md-6">
-                                            <!-- <span class="paragraph-title wow textLeft">chapter &mdash; 3</span> -->
-                                            <div class="wrapped-heading rightAlign">
+                                            <span class="paragraph-title wow textLeft">chapter &mdash; 3</span> -->
+                                            <!-- <div class="wrapped-heading rightAlign">
                                                 <h2 class="wow textLeft" data-wow-delay=".25s">des</h2>
                                                 <h2 class="wow textLeft" data-wow-delay=".35s">ign<span>.</span></h2>
                                             </div>
@@ -496,7 +496,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     <div class="offset-top-md design-multi-preview">
                         <div class="img-wrap">
                             <figure class="img-first wow fadeInLeft" data-wow-delay=".1s">
